--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			</div>
 
 			<button type="submit" class="btn btn-default bust" style="margin-bottom: 3px;">提交</button>
+			<button type="submit" class="btn btn-default newbust" style="margin-bottom: 3px;">清除</button>
 		</div>
 
 		<div class="centers">
