--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 	$('.newbust').click(function(event) {
 		setStorage('nums',0);
 		setStorage('rest',[]);
-                window.reload();
+                location.reload();
 	});
 	function drawRouletteWheel() {    
 	  var canvas = document.getElementById("wheelcanvas");    
